<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    android:parentActivityName=".view.MainActivity"
    tools:context="activity.PersonActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pFirstName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personFirstTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pFirstName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pLastName"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personLastTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pLastName"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="0dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/personGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pGender"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/personGenderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pGender"/>
    </LinearLayout>

    <ExpandableListView
        android:id="@+id/expandableListView"
        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
        android:dividerHeight="0.5dp"
        android:divider="@android:color/darker_gray"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:padding="2dp"
        tools:context=".Activity"/>

</LinearLayout>